--- a/MyWebApp/pom.xml
+++ b/MyWebApp/pom.xml
@@ -18,4 +18,9 @@
   <build>
     <finalName>MyWebApp</finalName>
   </build>
+  <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>2.2</version>
+</plugin>
 </project>
