--- a/MyWebApp/pom.xml
+++ b/MyWebApp/pom.xml
@@ -21,6 +21,6 @@
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-war-plugin</artifactId>
   <version>2.2</version>
-</plugin
+    </plugin>
   </build>
 </project>
