--- a/MyWebApp/pom.xml
+++ b/MyWebApp/pom.xml
@@ -17,5 +17,19 @@
   </dependencies>
   <build>
     <finalName>MyWebApp</finalName>
+    
+    <plugins>
+      <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>2.2</version>
+</plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>tomcat-maven-plugin</artifactId>
+        <version>1.0-beta-1</version>
+      </plugin>
+
+    </plugins>
       </build>
 </project>
